# pulsar-elasticsearch-sync-rs

./: Cargo.toml  Dockerfile  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: docker-image.yml
elasticsearch-rs-7.x/elasticsearch/src/: dangling_indices.rs  migration.rs  xpack.rs
elasticsearch-rs-7.x/elasticsearch/src/root/: bulk.rs
kubernetes/: deployment.yaml
src/: args.rs  es.rs  lib.rs  main.rs  prometheus.rs  pulsar.rs  ratelimiter.rs  util.rs
