[package]
name = "pulsar-elasticsearch-sync-rs"
version = "0.1.0"
authors = ["lichuan <lichuan@mur>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elasticsearch = "7.11.0-alpha.1"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.16.4"
url = "2.2.1"
clap = "2.33.3"
http = "0.2.3"
pulsar = { version = "2.0", features=["tokio-runtime"] }
futures = "0.3.13"
serde_json = "1.0.66"
serde = { version = "1.0.127", features = ["derive"] }
env_logger = "0.8.3"
log = "0.4.14"
#async-std = "1.9.0"
regex = "1.4.3"
chrono = "0.4.19"
openssl = { version = "0.10", features = ["vendored"] }
structopt = "0.3.21"
prometheus = { version = "0.12.0", features = ["process"] }
warp = "0.3.1"
lazy_static = "1.4.0"
