[package]
name = "pulsar-elasticsearch-sync-rs"
version = "0.1.0"
authors = ["lichuan <lichuan@mur>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# elasticsearch = "7.11.0-alpha.1"
elasticsearch = { path = "./elasticsearch-rs-7.x/elasticsearch" }
tokio = { version = "1", features = ["full"] }
sysinfo = "0.16.4"
url = "2.2.1"
clap = "2.33.3"
http = "0.2.3"
pulsar = { version = "4.1.1", features = ["tokio-runtime"] }
#pulsar = { git = "https://github.com/lichuan6/pulsar-rs", branch = "master", features = ["tokio-runtime"] }
futures = "0.3.16"
serde_json = "1.0.66"
serde = { version = "1.0.130", features = ["derive"] }
env_logger = "0.8.3"
log = "0.4.14"
#async-std = "1.9.0"
regex = "1.4.3"
chrono = "0.4.19"
openssl = { version = "0.10", features = ["vendored"] }
structopt = "0.3.21"
prometheus = { version = "0.12.0", features = ["process"] }
warp = "0.3.1"
lazy_static = "1.4.0"
uuid = { version = "0.8.2", features = ["v4"] }
anyhow = "1.0.57"


[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"

[profile.release]
lto = true
